fixed footer and white space

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,7 +41,6 @@
 }
 
 .btn-xlg {
-    padding: 18px 28px;
     font-size: 22px; //change this to your desired size
     line-height: normal;
     -webkit-border-radius: 8px;
@@ -86,7 +85,7 @@ font-size: 16px !important;
 
 .footer2 {
 	padding-bottom: 0px !important;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 100px;
