--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -193,7 +193,6 @@ $breakpoint-alpha: 480px; // adjust to your needs
 
 
 body {
-  padding: 0 2em;
   font-family: Montserrat, sans-serif;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
